compiler/fir/analysis-tests/testData/resolve/contextParameters/contextualLateinit.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ContextParameters

context(a: Int)
<!INAPPLICABLE_LATEINIT_MODIFIER!>lateinit<!> var b: String

/* GENERATED_FIR_TAGS: lateinit, propertyDeclaration, propertyDeclarationWithContext */
